name:              Yablog
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Hiromi ISHII
maintainer:        Hiromi ISHII
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://Yablog.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False

    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Model
                     Markups
                     Settings
                     Settings.StaticFiles
                     Handler.Root
                     Handler.Blog
                     Handler.User

    ghc-options:   -Wall -threaded -O0
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls

executable         Yablog
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 0.10       && < 0.11
                 , yesod-core                    >= 0.10       && < 0.11
                 , yesod-auth                    >= 0.8        && < 0.9
                 , yesod-static                  >= 0.10       && < 0.11
                 , yesod-default                 >= 0.6        && < 0.7
                 , yesod-form                    >= 0.4        && < 0.5
                 , mime-mail                     >= 0.3.0.3    && < 0.5
                 , clientsession                 >= 0.7.3      && < 0.8
                 , bytestring                    >= 0.9        && < 0.10
                 , blaze-builder                 >= 0.3        && < 0.4
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 0.8        && < 0.9
                 , case-insensitive              >= 0.4        && < 0.5
                 , http-types                    >= 0.6        && < 0.7
                 , persistent-mongoDB            >= 0.8        && < 0.9
                 , template-haskell
                 , hamlet                        >= 0.10       && < 0.11
                 , shakespeare-css               >= 0.10       && < 0.11
                 , shakespeare-js                >= 0.11       && < 0.12
                 , shakespeare-text              >= 0.10       && < 0.11
                 , hjsmin                        >= 0.0.14     && < 0.1
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.0        && < 1.2
                 , yaml                          >= 0.5        && < 0.6
                 , http-conduit                  >= 1.2        && < 1.3
                 , time                          >= 1.2        && < 1.3
                 , old-locale                    >= 1.0        && < 1.1
                 , pandoc                        >= 1.9        && < 1.10
                 , pandoc-types                  >= 1.9        && < 2.0
