name:              Yablog
version:           0.1.1
license:           BSD3
license-file:      LICENSE
author:            Hiromi ISHII
maintainer:        Hiromi ISHII
synopsis:          A simple blog engine powered by Yesod.
description:       A simple blog engine powered by Yesod.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://gitweb.konn-san.com/repo/Yablog/tree/master

extra-source-files:
  config/models, config/routes, messages/*.msg,
  templates/*.hamlet, templates/*.julius, templates/*.lucius
data-files:
  config/mongoDB.yml, config/settings.yml, config/robots.txt,
  static/css/*.css, static/img/*.png, static/js/*.js
Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False


library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False

    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Model
                     Markups
                     Forms
                     Settings
                     Settings.StaticFiles
                     Handler.Root
                     Handler.Blog
                     Handler.User

    ghc-options:   -Wall -threaded -O0
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                ViewPatterns
                EmptyDataDecls

executable         Yablog
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                ViewPatterns
                FlexibleContexts
                EmptyDataDecls

    build-depends: base                          >= 4          && < 5
                 , yesod-platform                == 1.1.*
                 , yesod
                 , yesod-core
                 , yesod-auth
                 , yesod-static
                 , yesod-default
                 , yesod-form
                 , yesod-recaptcha
                 , yesod-newsfeed
                 , yesod-fay
                 , mime-mail
                 , clientsession
                 , bytestring                    >= 0.9        && < 0.10
                 , blaze-builder
                 , text                          >= 0.11       && < 0.12
                 , persistent
                 , case-insensitive
                 , http-types
                 , persistent-mongoDB            == 1.0.*
                 , template-haskell
                 , hamlet
                 , shakespeare-css
                 , shakespeare-js
                 , shakespeare-text
                 , hjsmin
                 , monad-control
                 , wai-extra
                 , wai
                 , yaml
                 , http-conduit
                 , time                          >= 1.2        && < 1.5
                 , old-locale                    >= 1.0        && < 1.1
                 , pandoc
                 , pandoc-types
                 , xml-hamlet
                 , xml-conduit
                 , network                       >= 2.3        && < 2.4
                 , filepath                      >= 1.2        && < 1.4
                 , directory                     >= 1.1        && < 1.2
                 , containers                    >= 0.4        && < 0.5
                 , mtl                           >= 2.0        && < 2.2
                 , temporary
                 , resourcet
                 , data-default
                 , conduit

source-repository head
  type:     git
  location: https://github.com/konn/Yablog

source-repository this
  type:     git
  location: https://github.com/konn/Yablog
  tag: 0.0.1.3
